--- a/order-app/main/default/layouts/Invoice__c-Invoice Layout.layout-meta.xml
+++ b/order-app/main/default/layouts/Invoice__c-Invoice Layout.layout-meta.xml
@@ -23,6 +23,10 @@
                 <behavior>Edit</behavior>
                 <field>TotalValue__c</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>Campo_Test__c</field>
+            </layoutItems>
         </layoutColumns>
         <layoutColumns>
             <layoutItems>
